<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/meeting_item_relativeLayout"
    android:padding="4dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/meeting_list_thumbnail"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="4dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="6dp"
        android:contentDescription="@string/meetingThumbnail"
        app:srcCompat="@drawable/round_shape" />

    <ImageButton
        android:id="@+id/meeting_list_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="2dp"
        android:adjustViewBounds="true"
        android:background="@drawable/delete_icon"
        android:backgroundTint="#2E3032"
        android:contentDescription="@string/delete_icon"
        android:padding="20dp"
        android:scaleType="centerInside"/>

    <RelativeLayout
        android:id="@+id/meeting_list_text_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toStartOf="@id/meeting_list_delete"
        android:layout_toEndOf="@id/meeting_list_thumbnail">

        <TextView
            android:id="@+id/meeting_list_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:ellipsize="end"
            android:scrollHorizontally="true"
            android:lines="1"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:text="Title" />

        <TextView
            android:id="@+id/meeting_list_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/meeting_list_title"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:ellipsize="end"
            android:scrollHorizontally="true"
            android:lines="1"
            android:textColor="#000000"
            android:textSize="18sp"
            tools:text="Location" />

        <TextView
            android:id="@+id/meeting_list_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/meeting_list_title"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:ellipsize="end"
            android:scrollHorizontally="true"
            android:lines="1"
            android:textColor="#000000"
            android:textSize="18sp"
            tools:text="Date" />

        <TextView
            android:id="@+id/meeting_list_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/meeting_list_date"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="8dp"
            android:scrollHorizontally="true"
            android:ellipsize="end"
            android:textColor="#373737"
            android:textSize="16sp"
            tools:text="Subtitle"
            android:lines="1"/>

    </RelativeLayout>
</RelativeLayout>
